--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,14 @@
     <title>React App</title>
   </head>
   <body>
+      <style>
+          body {
+              margin: 0 !important;
+              padding: 0 !important;
+              background-color: #6060de;
+          }
+      </style>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
