--- a/Code/public/index.html
+++ b/Code/public/index.html
@@ -31,7 +31,7 @@
           body {
               margin: 0 !important;
               padding: 0 !important;
-              background-color: #6060de;
+              background-color: #000000;
           }
       </style>
 
